--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "@mui/x-data-grid": "^6.18.1",
+    "axios": "^1.6.4",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
